--- a/01-gallery.html
+++ b/01-gallery.html
@@ -18,6 +18,7 @@
     <!-- Add gallery items to this list -->
     <ul class="gallery"></ul>
 
+    <!-- Scripts -->
     <script
       defer
       src=" https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js "
